# enso-forecast

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.ps1
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/forecasts/: forecast_future.csv  forecast_future.parquet
data/processed/: enso_master.csv  enso_master.parquet
data/raw/: official_forecast.csv
runs/train_full_v1_completo/: metrics.parquet  predictions.parquet
runs/train_full_v2_subsuperficial/: metrics.parquet  predictions.parquet
scripts/: 01_ingest.py  02_audit_leakage.py  03_train.py  04_forecast.py  05_recover_metrics.py  06_merge_runs.py  07_overnight.ps1  _test_winners.py
src/enso/: __init__.py  config.py
src/enso/data/: leakage.py  loader.py  splits.py
src/enso/eval/: compare.py  metrics.py
src/enso/features/: engineer.py
src/enso/forecast/: future.py  official.py
src/enso/ingest/: noaa.py
src/enso/models/: base.py  baselines.py  dl.py
src/enso/train/: trainer.py
streamlit_app/: Inicio.py  utils.py
streamlit_app/pages/: 00_Visao_Geral.py  01_Estado_Atual.py  02_Mapa_Nino.py  03_Serie_Historica.py  04_Modelos.py  05_Forecast.py  06_Oficial_vs_Modelo.py  07_Contexto_Historico.py  08_Auditoria_de_Leakage.py  09_Metodologia.py  10_Glossario.py
streamlit_app/shared/: components.py  style.py
