[project]
name = "enso-forecast"
version = "0.1.0"
description = "Previsao multi-horizonte do ENSO com auditoria de leakage, multi-seed, baselines fortes e arquiteturas modernas (TCN, Transformer, Mamba)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Vinicius Azevedo", email = "viniciusazeved@users.noreply.github.com" }
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "pyarrow>=17.0",
    "requests>=2.32",
    "plotly>=5.24",
    "streamlit>=1.39",
    "pyyaml>=6.0",
    "rich>=13.9",
    "typer>=0.13",
    "tqdm>=4.66",
    "einops>=0.8",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "tensorboard>=2.18",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "ipykernel>=6.29",
    "jupyter>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enso"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.uv]
# torch via index dedicado (CUDA 12.4)

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
